Fixed navbar z-index bug finally
I finally posted the problem on stack overflow because it was actually making my homepage unusable, and itsallgoodie told me that fixed and sticky element's z-indexes will override children (well, that's not what he said, but close enouph)

--- a/css/header.css
+++ b/css/header.css
@@ -6,6 +6,7 @@ header nav {
   position: -webkit-sticky;
   top: 0px;
   font-size: 15px;
+  z-index: 2;
 }
 header nav ul {
 	list-style-type: none;
@@ -15,7 +16,6 @@ header nav ul {
 }
 header nav ul li {
   float: left;
-  /* height: calc(1.15em + 28px); */
   height: 46.4px;
 }
 header nav ul li.right {
@@ -38,7 +38,7 @@ header nav ul li.right.hide ul {
 }
 header nav ul li a {
 	display: block;
-	color: var(--color);
+	color: var(--headTxt);
 	padding: 14px 16px;
   text-decoration: none;
   height: 18.4px;
@@ -56,7 +56,6 @@ header nav ul li ul {
   position: absolute;
   height: 0px;
   max-height: calc(100vh + (var(--size) - 46.4px));
-  z-index: 6; /* why wont this work!? */
   overflow: auto;
   transform: translate(0px, 0px);
   overflow: auto;
